fix(landing page): movie trailer is not showing

--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url('/assets/img/cinema-with-popcorn-box.jpg');
+    background-image: url('../../../../assets/img/cinema-with-popcorn-box.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
